JumpScript/tests/baselines/reference/voidOperatorInvalidOperations.errors.txt
tests/cases/conformance/expressions/unaryOperators/voidOperator/voidOperatorInvalidOperations.jump(4,15): error TS1005: ',' expected.
tests/cases/conformance/expressions/unaryOperators/voidOperator/voidOperatorInvalidOperations.jump(4,20): error TS1109: Expression expected.
tests/cases/conformance/expressions/unaryOperators/voidOperator/voidOperatorInvalidOperations.jump(7,17): error TS1109: Expression expected.


==== tests/cases/conformance/expressions/unaryOperators/voidOperator/voidOperatorInvalidOperations.jump (3 errors) ====
    // Unary operator void
    
    // operand before void
    var ANY = ANY void ;    //expect error
                  ~~~~
!!! error TS1005: ',' expected.
                       ~
!!! error TS1109: Expression expected.
    
    // miss an operand
    var ANY1 = void ;
                    ~
!!! error TS1109: Expression expected.